--- a/src/main/resources/templates/PipelineResource/cronJobReportHistoryAlt.html
+++ b/src/main/resources/templates/PipelineResource/cronJobReportHistoryAlt.html
@@ -24,63 +24,59 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <div class="accordion" id="accordion{env}">
-                        {#for reportDataList in cronJobReportsMasterList}
-                            {#if reportDataList.env == env}
-                                <tr>
-                                    <td>
-                                        <div class="accordion-item">
-                                            <h2 class="accordion-header" id="heading{reportDataList.runName}">
-                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}" aria-expanded="true" aria-controls="{reportDataList.runName}">
-                                                    {reportDataList.runName}
-                                                </button>
-                                            </h2>
-                                            <div id="{reportDataList.runName}" class="accordion-collapse collapse" aria-labelledby="heading{reportDataList.runName}" data-bs-parent="#accordion{env}" style=""  data-bs-toggle="collapse">
-                                                <div class="accordion-body">
-                                                    <table id="{reportDataList.runName}Table" class="table table-hover">
-                                                        <thead>
-                                                            <tr>
-                                                                <th>Run Finished Date</th>
-                                                                <th>Test HTML Report</th>
-                                                                <th>Test ZIP</th>
-                                                                <th>Test Log File</th>
-                                                            </tr>
-                                                        </thead>
-                                                        <tbody>
-                                                            {#for reportData in reportDataList.getReportData}
+                    <div class="bs-component">
+                        <div class="accordion" id="accordion-{env}">
+                            {#for reportDataList in cronJobReportsMasterList}
+                                {#if reportDataList.env == env}
+                                    <tr>
+                                        <td>
+                                            <div class="accordion-item">
+                                                <h2 class="accordion-header" id="heading-{reportDataList.runName}">
+                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#{reportDataList.runName}-body" aria-expanded="false" aria-controls="{reportDataList.runName}-body">
+                                                        {reportDataList.runName}
+                                                    </button>
+                                                </h2>
+                                                <div id="{reportDataList.runName}-body" class="accordion-collapse collapse" aria-labelledby="heading-{reportDataList.runName}" data-bs-parent="#accordion-{env}" style=""> <!-- MOving the accordion-collapse end div here allows links to work -->
+                                                    <div class="accordion-body">
+                                                        <table id="{reportDataList.runName}-Table" class="table">
+                                                            <thead>
                                                                 <tr>
-                                                                    <td>{reportData.lastRunDate}</td>
-                                                                    <td><A href="{reportData.reportUrl}" target="_blank" rel="noopener noreferrer">Link to Report</A></td>
-                                                                    <td><A href="{reportData.zipUrl}" target="_blank" rel="noopener noreferrer">Link to full Zip</A></td>
-                                                                    <td><A href="{reportData.logUrl}" target="_blank" rel="noopener noreferrer">Link to Log File</A></td>
+                                                                    <th>Run Finished Date</th>
+                                                                    <th>Test HTML Report</th>
+                                                                    <th>Test ZIP</th>
+                                                                    <th>Test Log File</th>
                                                                 </tr>
-                                                            {/for}
-                                                        </tbody>
-                                                    </table>
-                                                </div>
-                                            </div> 
-                                        </div>                                  
-                                    </td>
-                                </tr>
-                            {/if}
-                        {/for}
+                                                            </thead>
+                                                            <tbody>
+                                                                {#for reportData in reportDataList.getReportData}
+                                                                    <tr>
+                                                                        <td>{reportData.lastRunDate}</td>
+                                                                        <td><A href="{reportData.reportUrl}" target="_blank" rel="noopener noreferrer" class="collapse-item">Link to Report</A></td>
+                                                                        <td><A href="{reportData.zipUrl}" target="_blank" rel="noopener noreferrer" class="collapse-item">Link to full Zip</A></td>
+                                                                        <td><A href="{reportData.logUrl}" target="_blank" rel="noopener noreferrer" class="collapse-item">Link to Log File</A></td>
+                                                                    </tr>
+                                                                {/for}
+                                                            </tbody>
+                                                        </table>
+                                                    </div>
+                                                </div> 
+                                            </div>                                  
+                                        </td>
+                                    </tr>
+                                {/if}
+                            {/for}
+                        </div>
                     </div>
                 </tbody>
             </table>
-       
     {/for}
-    
-
-</div>
-
-
 
 <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
 <script src="https://cdn.datatables.net/2.1.7/js/dataTables.js"></script>
 <link rel="stylesheet" href="https://cdn.datatables.net/2.1.7/css/dataTables.dataTables.css">
 <script src="https://cdn.datatables.net/plug-ins/2.1.7/dataRender/ellipsis.js"></script>
 <script src="/js/cronjobReport.js"></script>
-<link href="/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/flaty-bootstrap.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 {#include progress-bar.html} {/include}
 </body>
